2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * acinclude.m4:
    * configure.in:
    * Makefile.am: Don't set seahorse-daemon setuid when not needed 
    to run mlock().

2006-11-06  Adam Schreiber  <sadam@clemson.edu>

    * help/ChangeLog: Added file for translation changes
    for the manual 
    * help/it: Added translation files (see the above file)

2006-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: Version 0.9.7
    * configure.in: Bump version number

2006-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: Change 'password' to 'passphrase'
    Fixes bug #369874

2006-11-02  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-pgp-source.h:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-unknown-source.c:
    * plugins/applet/seahorse-applet.c:
    * src/seahorse-gkeyring-item-properties.c:
    * src/seahorse-gkeyring-operation.c:
    * src/seahorse-gkeyring-source.c:
    * src/seahorse-key-properties.c
    * src/seahorse-key-manager.c: Cleanup the key loading and searching code.
    Don't unnecessary remove keys from context. Fixes bug #363282

2006-11-01  Nate Nielsen  <nielsen@memberwebs.com>

	* src/seahorse-ssh-upload.glade: Remove wrapped text since we 
	do our own wrapping. 
	* src/seahorse-ssh-upload.c: Image no longer present.

2006-11-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-source.c: Stop using some deprecated
    functions. Fixes #351969

2006-11-01  Nate Nielsen  <nielsen@memberwebs.com>

    * help/C/seahorse.xml: