@@ -1,5 +1,11 @@
 2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-manager.c:
+    * src/seahorse-keyserver-results.c: Describe part of key being
+    exported in UI strings. Fixes bug #372099
+    
+2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>
+
     * acinclude.m4:
     * configure.in:
     * Makefile.am: Don't set seahorse-daemon setuid when not needed 
